# agent-built-agent

./: DEMO.md  README.md  agent_config.yaml  main.py  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yml
agent_built_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py
src/core/: __init__.py  agent.py  config.py  state.py
src/editors/: __init__.py  code_editor.py  config_editor.py  python_editor.py
src/version_control/: __init__.py  edit_tracker.py  git_manager.py
tests/: __init__.py  test_config.py  test_editors.py  test_state.py  test_version_control.py
